--- a/WebDesignHomework/Assignment13/travel.html
+++ b/WebDesignHomework/Assignment13/travel.html
@@ -44,7 +44,7 @@
     <!-- Blog Post Section -->
     <section class="blog-post">
         <h2 style="text-align: left;">First stop: KAUAI</h2>  
-        <p style="text-align: left;">I'm kicking off the blog with an exciting journey to Kauai, the "Garden Isle" of Hawaii! Renowned for its lush, tropical landscapes, this island is a paradise of vibrant greenery, cascading waterfalls, and pristine beaches. Kauai offers a unique blend of natural beauty and adventure, with its rich wildlife and ever-changing weather adding an element of surprise to every moment. From the dramatic cliffs of the Nā Pali Coast to the tranquil charm of Hanalei Bay, this island promises breathtaking views and unforgettable experiences at every turn. Stay tuned as we dive into the wonders of Kauai!
+        <p style="text-align: left;">I'm starting off the blog with an exciting journey to Kauai, the "Garden Isle" of Hawaii! Renowned for its lush, tropical landscapes, this island is a paradise of vibrant greenery, cascading waterfalls, and pristine beaches. Kauai offers a unique blend of natural beauty and adventure, with its rich wildlife and ever-changing weather adding an element of surprise to every moment. From the dramatic cliffs of the Nā Pali Coast to the tranquil charm of Hanalei Bay, this island promises breathtaking views and unforgettable experiences at every turn. Stay tuned as we dive into the wonders of Kauai!
         </p>
 
         <p style="text-align: left;">
