--- a/WebDesignHomework/Assignment14/gallery.html
+++ b/WebDesignHomework/Assignment14/gallery.html
@@ -61,5 +61,10 @@
     <p style="text-align: center;">&copy; My Travel Blog</p>
 </footer>
 
+<div>
+    <canvas id="myCanvas" height="300" width="300"></canvas>
+    <script src="js/main.js"></script>
+</div>
+
 </body> 
 </html> 
