--- a/WebDesignHomework/FinalProject/gallery.html
+++ b/WebDesignHomework/FinalProject/gallery.html
@@ -53,6 +53,15 @@
 
 <hr /> 
 
+<!-- Audio section -->
+<div class="media-item audio-section">
+    <h3>Relax and Listen While Scroll</h3>
+    
+  <!-- Audio Element -->        
+<audio controls loop
+        <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://www.youtube.com/watch?v=6HLnETzM3Rs" target="_blank">BGM channel</a></p>
+</div>
+
    <!-- Footer Section -->
    <footer class="footer">
     <p style="text-align: right;">
