--- a/WebDesignHomework/FinalProject/gallery.html
+++ b/WebDesignHomework/FinalProject/gallery.html
@@ -55,11 +55,11 @@
 
 <!-- Audio section -->
 <div class="media-item audio-section">
-    <h3>Relax and Listen While Scroll</h3>
+    <h3>Relax and Listen While You Scroll</h3>
     
   <!-- Audio Element -->        
-<audio controls loop
-        <p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://www.youtube.com/watch?v=6HLnETzM3Rs" target="_blank">BGM channel</a></p>
+<audio controls loop 
+<p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://soundcloud.com/hawaiianluaupartyband/sets/luau-party-hawaiian-ukulele" target="_blank">Hawaiian Luau Party Band</a></p>
 </div>
 
    <!-- Footer Section -->
