--- a/WebDesignHomework/FinalProject/gallery.html
+++ b/WebDesignHomework/FinalProject/gallery.html
@@ -53,13 +53,16 @@
 
 <hr /> 
 
+<!-- Media section -->
+<h1 style="text-align: center;">Media</h1>
+<div class="media-section">  
 <!-- Audio section -->
 <div class="media-item audio-section">
     <h3>Relax and Listen While You Scroll</h3>
-    
-  <!-- Audio Element -->        
-<audio controls loop 
-<p style="font-size: 10px;">Audio: Jazz Music Loop by <a href="https://soundcloud.com/hawaiianluaupartyband/sets/luau-party-hawaiian-ukulele" target="_blank">Hawaiian Luau Party Band</a></p>
+    <img src="https://i1.pickpik.com/photos/584/694/565/frangipani-holiday-hawaii-exotic-a6c83e07190e45226da22893f417937e.jpg" alt="plumeria image" style="width: 90%; height: auto; max-height: 150px; margin-bottom: 10px;">
+    <!-- Audio Element -->        
+<audio controls loop
+        <p style="font-size: 10px;">Audio: Ukulele Music Loop by <a href="https://soundcloud.com/hawaiianluaupartyband/sets/luau-party-hawaiian-ukulele" target="_blank">Hawaiian Luau Party Band</a></p>
 </div>
 
    <!-- Footer Section -->
